--- a/version 2/src/components/contacts/contacts.css
+++ b/version 2/src/components/contacts/contacts.css
@@ -1,53 +1,73 @@
 .form-contactUs {
-    margin: 70px 0px 100px 210px;
-  }
-  
-  .form-title {
+    padding: 10% 15%;
+}
+
+.form-contactUs::before {
+  background-image: url("../../img/form-background.webp");
+  background-repeat: no-repeat;
+  content: "";
+  position: absolute;
+  background-size: 100%;
+  filter: brightness(51%);
+  top: 25%;
+  left: 0;
+  width: 100%;
+  height: 160%;
+  z-index: -1;
+}
+
+.form-title {
     display: flex;
     flex-direction: column;
-  }
+    margin: 20px 0;
+}
   
   .form-title > p {
     margin-bottom: 15px;
     letter-spacing: 5px;
-    color: #878787;
+    color: white;
     font-size: 18px;
     font-family: sans-serif;
   }
-  
-  .form-messige {
+
+  .form-message p {
+    color: white;
+  }
+
+  .form-message {
     display: flex;
     font-size: 48px;
     font-weight: 400;
-    margin-top: 0px;
+    margin-top: 0;
     color: #333333;
     font-family: sans-serif;
   }
   
-  .form-messige * {
-    margin: 0px 0px;
+  .form-message * {
+    margin: 0 0;
   }
   
-  .form-messige p:nth-child(2) {
+  .form-message p:nth-child(2) {
     padding-left: 10px;
     font-weight: bold;
   }
   
-  .container-inputs > input {
+.container-inputs > input {
+    display:grid;
+    column-gap: 35px;
+    row-gap: 30px;
     height: 50px;
-    padding: 0px 25px;
-    background-color: #f7f7f7;
-    border: 1px solid #f0f0f0;
-  }
-  
-  .yousMessage {
-    width: 1170px;
-  }
+}
+
+.yousMessage {
+  grid-column: 1 / span 2;
+  height: 150px;
+  background-color: #f7f7f7;
+  border: 1px solid black;
+}
   
   .container-inputs {
     display: grid;
-    grid-template-columns: 570px 570px;
-    grid-template-rows: auto;
     column-gap: 35px;
     row-gap: 30px;
   }
@@ -60,9 +80,9 @@
   }
   
   .formButton {
+    margin-left: auto;
+    margin-right: auto;
     grid-column: 1 / span 2;
-    margin: 0px 409px;
-    height: 50px;
     border-radius: 50px;
     border: none;
     color: white;
