--- a/version 2/src/components/contacts/contacts.css
+++ b/version 2/src/components/contacts/contacts.css
@@ -9,10 +9,10 @@
   position: absolute;
   background-size: 100%;
   filter: brightness(51%);
-  top: 25%;
+  top: 161px;
   left: 0;
   width: 100%;
-  height: 160%;
+  height: 1110px;
   z-index: -1;
 }
 
